[package]
name = "tut_by_tyr_tonic_grpc"
version = "0.1.0"
authors = ["Leon <yanglyu.leon.7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
arc-swap="1.5.1"
chrono = "0.4"
dashmap = "5.4.0"
futures = "0.3.17"
lazy_static="1.4.0"
prost = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
tonic = "0.8.3"
tokio = { vection = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8.4"

[workspace]
